[project]
name = "yoga-expert"
version = "0.1.0"
description = ""
authors = [
    {name = "Dhruv Mundada",email = "dhruv.mundada04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "yoga_expert", from = "src"}]

[tool.poetry.scripts]
dev = "yoga_expert.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.7"
langchain = "^0.1.20"
langgraph = "^0.0.30"
openai = "^1.35.0"
redis = "^5.0.4"
sqlalchemy = "^2.0.30"
alembic = "^1.13.2"
pgvector = "^0.2.5"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
black = "^24.4.0"
