[tool.poetry]
name = "chatup"
version = "0.1.0"
description = "RAG-powered agentic chatbot"
authors = ["Dhruv Mundada <dhruv.mundada04@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "chatup", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
openai = "^1.100.2"
langchain = "^0.3.27"
pinecone = ">=7.3.0,<8.0.0"
sqlalchemy = "^2.0.43"
alembic = "^1.16.4"
pgvector = "^0.4.1"
psycopg2-binary = "^2.9.10"
redis = "^6.4.0"
pdfplumber = "^0.11.7"
python-docx = "^1.2.0"
pytesseract = "^0.3.13"
pillow = "^11.3.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
langgraph = "^0.6.6"
langchain-community = "^0.3.27"
python-multipart = "^0.0.20"
langchain-openai = "^0.3.30"
tiktoken = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"
mypy = "^1.17.1"
ruff = "^0.12.9"

[tool.poetry.scripts]
dev = "chatup.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
